--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 PORT=8080
 GIN_MODE=release
 
-# Redis Configuration (optional - falls back to memory cache if not set)
+# Redis Configuration (optional - falls back to memory cache)
 # Format: redis://[[user]:password@]host:port[/db]
 # Examples:
 #   redis://localhost:6379
@@ -12,3 +12,6 @@ REDIS_URL=
 
 # Cache TTL in seconds (default: 600 = 10 minutes)
 CACHE_TTL=600
+
+# Java version mapping config file path (default: java.json)
+JAVA_CONFIG_PATH=java.json
